--- a/patch 1.1/html/faculty-submitted.html
+++ b/patch 1.1/html/faculty-submitted.html
@@ -29,10 +29,7 @@
                 <i class="fa-solid fa-house"></i>
                 <span class="link-name">Home</span>
             </a>
-            <a href="#" class="link">
-                <i class="fa-solid fa-calendar"></i>
-                <span class="link-name">Calendar</span>
-            </a>
+           
         </div>
         <div class="navbar-group">
             <a href="#" class="link" id="dropdown-1">
@@ -40,9 +37,9 @@
                 <span class="link-name toggle">Teaching</span>
             </a>
             <div id="toggle-group">
-                <a href="../html/faculty-resources.html" class="link visible">
-                    <i class="fa-solid fa-book"></i>
-                    <span class="link-name">Resources</span>
+                <a href="../html/faculty-grades.html" class="link visible">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <span class="link-name">Records</span>
                 </a>
                 <a href="../html/faculty-submissions.html" class="link visible active">
                     <i class="fa-solid fa-folder"></i>
