--- a/patch 1.1/html/webdev-classwork.html
+++ b/patch 1.1/html/webdev-classwork.html
@@ -37,9 +37,9 @@
                 <span class="link-name toggle">Teaching</span>
             </a>
             <div id="toggle-group">
-                <a href="../html/faculty-resources.html" class="link visible">
-                    <i class="fa-solid fa-book"></i>
-                    <span class="link-name">Resources</span>
+                <a href="../html/faculty-grades.html" class="link visible">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <span class="link-name">Records</span>
                 </a>
                 <a href="../html/faculty-submissions.html" class="link visible">
                     <i class="fa-solid fa-folder"></i>
@@ -56,10 +56,7 @@
             </div>
         </div>
         <div class="navbar-group">
-            <a href="#" class="link" id="dropdown-1">
-                <i class="fa-solid fa-archive"></i>
-                <span class="link-name">Archived Classes</span>
-            </a>
+            
             <a href="/profile/html/profile-faculty.html" class="link" id="dropdown-1">
                 <i class="fa-solid fa-gear"></i>
                 <span class="link-name">Settings</span>
