--- a/profile/html/dashboard-student.html
+++ b/profile/html/dashboard-student.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="../html/dashboard-student.html" class="active"><i class="fa-solid fa-house"></i>Dashboard</a></li>
-                <li><a href="../html/attendance-student.html"><i class="fa-solid fa-clipboard-user"></i>Attendance</a></li>
+                
                 <li><a href="/profile/html/view-grades.html"><i class="fa-solid fa-ranking-star"></i>Grades</a></li>
                 <li><a href="../html/profile.html"><i class="fa-solid fa-user"></i>Profile</a></li>
             </ul>
@@ -37,7 +37,7 @@
     </aside>
     <main>
         <div class="subject-container">
-            <a href="#">
+            <a href="/patch 1.1/html/webdev-student.html">
                 <div class="sub-img">
                     <div class="subject-card">
                         <div class="subject-meta">
@@ -66,64 +66,7 @@
                         <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
-                <a href="#">
-                    <div class="sub-img">
-                        <div class="subject-card">
-                            <div class="subject-meta">
-                                <span class="subject-title">Advance Airline Ticketing</span>
-                                <span class="subid">AIS223</span>
-                                <span class="professor">Caguia, Cielito Mercado</span>
-                            </div>
-                        </div>
-                    </a>
-                        <div class="act-meta">
-                            <span class="act-dl">due June 14:</span>
-                            <span class="act-list">
-                                <div class="act-title">
-                                    <ul>
-                                        <li>
-                                            <a href="../html/activity1.html" class="link">5:00 pm - Submission of exam</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <a href="../html/webdev-classwork.html" class="link-1">view all</a>
-                            </span>
-                        </div>
-                        <div class="class-meta">
-                            <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                            <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
-                            <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
-                        </div>
-                    </div>
-                <a href="#">
-                    <div class="sub-img">
-                        <div class="subject-card">
-                            <div class="subject-meta">
-                                <span class="subject-title">System Analysis and Design</span>
-                                <span class="subid">IS222</span>
-                                <span class="professor">Dasalla, Jerum Basanes</span>
-                            </div>
-                        </div>
-                    </a>
-                    <div class="act-meta">
-                        <div class="act-dl">due June 21:</div>
-                        <span class="act-list">
-                            <div class="act-title">
-                                <ul>
-                                    <li>
-                                        <a href="../html/activity1-saad.html" class="link">5:00 pm - Final project</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <a href="../html/webdev-classwork.html" class="link-1">view all</a>
-                        </span>
-                    </div>
-                        <div class="class-meta">
-                            <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                            <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
-                            <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
-                        </div>
-                    </div>
+                
         </div>
     </main>
 </body>
