--- a/profile/html/profile-faculty.html
+++ b/profile/html/profile-faculty.html
@@ -14,15 +14,14 @@
     <header>
         <div>
             <label for="menuToggle" class="menu-button"><i class="fa-solid fa-bars"></i></label>
-            <a href="../html/dashboard-student.html"></a><h1>ActTrack</h1></a>
+            <a href="/patch 1.1/html/faculty-dashboard.html"><h1>ActTrack</h1></a>
         </div>
     </header>
     <aside class="aside-menu">
         <nav>
             <ul>
-                <li><a href="../html/dashboard-student.html"><i class="fa-solid fa-house"></i>Dashboard</a></li>
-                <li><a href="../html/attendance-student.html"><i class="fa-solid fa-clipboard-user"></i>Attendance</a></li>
-                <li><a href="../html/grades.html"><i class="fa-solid fa-ranking-star"></i>Grades</a></li>
+                <li><a href="/patch 1.1/html/faculty-dashboard.html"><i class="fa-solid fa-house"></i>Dashboard</a></li>
+                
                 <li><a href="../html/profile.html" class="active"><i class="fa-solid fa-user"></i>Profile</a></li>
             </ul>
         </nav>
@@ -70,37 +69,6 @@
                     <div class="top">
                         <p class="heading">Phone</p>
                         <p class="text">09123456789</p>
-                    </div>
-                </div>
-                <div>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="border">
-            <button>Edit</button>
-            <h1 class="mainheading">Address</h1>
-            <div class="container">
-                <div class="left">
-                    <div class="top">
-                        <p class="heading">Country</p>
-                        <p class="text">Philippines</p>
-                    </div>
-                    <div class="top">
-                        <p class="heading">Postal Code</p>
-                        <p class="text">1704</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="top">
-                        <p class="heading">City</p>
-                        <p class="text">Parañaque City</p>
-
-                    </div>
-                    <div class="top">
-                        <p class="heading">Region</p>
-                        <p class="text">Metro Manila</p>
                     </div>
                 </div>
                 <div>
