--- a/profile/html/view-grades.html
+++ b/profile/html/view-grades.html
@@ -81,7 +81,7 @@
                             <td>3</td>
                             <td><input type="text" disabled name="prelim_grade" value="86.00" min="0" max="100" required></td>
                             <td><input type="text" disabled name="midterm_grade" value="85.00" min="0" max="100" required></td>
-                            <td><input type="text" disabled name="final_grade" value="" min="0" max="100" required></td>
+                            <td><input type="text" disabled name="final_grade" value="90" min="0" max="100" required></td>
                             <td><b id="gwa"></b></td>
                         </tr>
                     </tbody>
