--- a/patch 1.1/html/faculty-dashboard.html
+++ b/patch 1.1/html/faculty-dashboard.html
@@ -37,9 +37,9 @@
                 <span class="link-name toggle">Teaching</span>
             </a>
             <div id="toggle-group">
-                <a href="../html/faculty-resources.html" class="link visible">
-                    <i class="fa-solid fa-book"></i>
-                    <span class="link-name">Resources</span>
+                <a href="../html/faculty-grades.html" class="link visible">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <span class="link-name">Records</span>
                 </a>
                 <a href="../html/faculty-submissions.html" class="link visible">
                     <i class="fa-solid fa-folder"></i>
@@ -56,10 +56,7 @@
             </div>
         </div>
         <div class="navbar-group">
-            <a href="#" class="link" id="dropdown-1">
-                <i class="fa-solid fa-archive"></i>
-                <span class="link-name">Archived Classes</span>
-            </a>
+        
             <a href="/profile/html/profile-faculty.html" class="link" id="dropdown-1">
                 <i class="fa-solid fa-gear"></i>
                 <span class="link-name">Settings</span>
@@ -99,64 +96,7 @@
                     </div>
                 </div>
 
-            <a href="#">
-                <div class="sub-img">
-                    <div class="subject-card">
-                        <div class="subject-meta">
-                            <span class="subject-title">Advance Airline Ticketing</span>
-                            <span class="subid">AIS223</span>
-                            <span class="professor">Caguia, Cielito Mercado</span>
-                        </div>
-                    </div>
-                </a>
-                    <div class="act-meta">
-                        <span class="act-dl">due June 14:</span>
-                        <span class="act-list">
-                            <div class="act-title">
-                                <ul>
-                                    <li>
-                                        <a href="../html/activity1.html" class="link">5:00 pm - Submission of exam</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <a href="../html/webdev-classwork.html" class="link-1">view all</a>
-                        </span>
-                    </div>
-                    <div class="class-meta">
-                        <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                        <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
-                        <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
-                    </div>
-                </div>
-            <a href="#">
-                <div class="sub-img">
-                    <div class="subject-card">
-                        <div class="subject-meta">
-                            <span class="subject-title">System Analysis and Design</span>
-                            <span class="subid">IS222</span>
-                            <span class="professor">Dasalla, Jerum Basanes</span>
-                        </div>
-                    </div>
-                </a>
-                <div class="act-meta">
-                    <div class="act-dl">due June 21:</div>
-                    <span class="act-list">
-                        <div class="act-title">
-                            <ul>
-                                <li>
-                                    <a href="../html/activity1-saad.html" class="link">5:00 pm - Final project</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <a href="../html/webdev-classwork.html" class="link-1">view all</a>
-                    </span>
-                </div>
-                    <div class="class-meta">
-                        <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                        <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
-                        <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
-                    </div>
-                </div>
+            
         </div>
     </main>
     <script src="../js/navbar.js"></script>
