--- a/patch 1.1/html/activity1-webdev.html
+++ b/patch 1.1/html/activity1-webdev.html
@@ -57,7 +57,7 @@
         </div>
         <div class="navbar-group">
             
-            <a href="#" class="link" id="dropdown-1">
+            <a href="/profile/html/profile-faculty.html" class="link" id="dropdown-1">
                 <i class="fa-solid fa-gear"></i>
                 <span class="link-name">Settings</span>
             </a>
