--- a/patch 1.1/html/faculty-submissions.html
+++ b/patch 1.1/html/faculty-submissions.html
@@ -85,8 +85,8 @@
                 <h2>In progress</h2>
                 <div class="task" onclick="location.href = '/patch 1.1/html/activity1-webdev.html'">
                     <div class="task-meta-1">
-                        <img src="../static/icons8-question-64.png" width="50" height="50" alt="q">
-                        <span class="task-name">Question</span>
+                        <img src="../static/icons8-exam-40.png" width="50" height="50" alt="q">
+                        <span class="task-name">Final Project Presentation</span>
                     </div>
                     <div class="task-info">
                         <span class="task-desc">Web Design Development | due 10 Jun</span>
